--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
         <a href="#"><i class="bx bxl-github"></i></a>
         <a href="#"><i class="bx bx-envelope"></i></a>
       </div>
-      <p class="copyright">© 2025 Charls Conte - All Rights Reserved.</p>
+      <p class="copyright">© 2025 Charls Conte.</p>
     </footer>
 
     <script src="script.js"></script>
